# ztamp

./: .gitignore  CLAUDE.md  README.md
assets/form/: form_offsets.toml  template.tiff
docs/: DOCUMENTATION_STRATEGY.md  README.md
docs/architecture/: README.md  TECHNOLOGY_STACK.md
docs/decisions/: BACKLOG.md  PRIORITY.md  README.md  RESOLVED.md
docs/overview/: PRODUCT_IDENTITY.md  README.md
docs/process/: COMMUNICATION.md  GIT_STRATEGY.md  PROMPT.md  README.md  REVERSE_PROMPT.md  TASKLOG.md
docs/reference/: GLOSSARY.md  README.md
docs/roadmap/: PHASE_0_PROCESS.md  PHASE_1_STRUCTURE.md  PHASE_2_PDF_WRITE.md  PHASE_3_PDF_CONCAT.md  PHASE_4_SCREENSHOT.md  PHASE_5_SUBMISSION.md  PHASE_6_TRACKING.md  PHASE_7_RESUME.md  README.md
rztamp/: Cargo.toml  README.md
rztamp/src/: lib.rs  offsets.rs  pdf.rs
secret/: secrets.toml.example
tools/: Cargo.toml
tools/src/: concat.rs  export.rs  fill.rs
ztamp/: .gitignore  README.md  mix.exs
ztamp/assets/css/: app.css
ztamp/assets/js/: app.js
ztamp/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
ztamp/lib/: ztamp.ex  ztamp_web.ex
ztamp/lib/ztamp/: application.ex  browser_server.ex  job_search.ex  mailer.ex  nif.ex  pdf_export.ex  repo.ex
ztamp/lib/ztamp/job_search/: entry.ex
ztamp/lib/ztamp_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
ztamp/lib/ztamp_web/components/: core_components.ex  layouts.ex
ztamp/native/nif/: Cargo.toml
ztamp/native/nif/src/: lib.rs
ztamp/priv/repo/: seeds.exs
ztamp/test/: test_helper.exs
ztamp/test/support/: conn_case.ex  data_case.ex
(+17 files in other folders)
