[package]
name = "tanf-tools"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tanf-fill"
path = "src/fill.rs"

[[bin]]
name = "tanf-concat"
path = "src/concat.rs"

[[bin]]
name = "tanf-export"
path = "src/export.rs"

[dependencies]
lopdf = "0.39"
rztamp = { path = "../rztamp" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
